--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "Bracket Validator in Elm",
     "repository": "https://github.com/kgashok/vbracket",
     "env": {
-        "ELM_COMPILE": "elm make Bracket.elm --output elm.js "
+        "ELM_COMPILE": "elm make Bracket.elm --warn --output elm.js "
     },
     "buildpacks": [
         {
